--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ WGCNA_Network.graphml
 literature
 programs/.Rhistory
 programs/.Rhistory
+annotation_code/correlation_tables/turquoise_geneCorrelation.txt
+annotation_code/correlation_tables/brown_geneCorrelation.txt
